--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
               <label for="subscribe">E-mail</label>
             </div>
             <div class="form__fild">
-              <button type="button" class="form-footer__btn btn">
+              <button type="submit" class="form-footer__btn btn">
                 <span>Подписаться</span>
                 <svg width="24" height="24" class="send">
                   <use href="./img/sprites2.svg#icon-send"></use>
@@ -519,7 +519,7 @@
             <label for="checkbox" class="form-modal__label">Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></label>
           </div>
 
-          <button type="button" class="form-modal__btn">Отправить</button></form>
+          <button type="submit" class="form-modal__btn">Отправить</button></form>
       </div>
     </div>
     <!-- /modal window -->
