--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
           </div>
 
           <label for="textarea" class="form-modal__label">Комментарий</label>
-          <textarea type="textarea" class="form-modal__text" id="textarea"></textarea>
+          <textarea type="textarea" class="form-modal__text" id="textarea" name="mesSage" placeholder="Введите текст"></textarea>
 
           <div class="form-modal__field">
             <input type="checkbox" class="form-modal__checkbox" id="checkbox">
