--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <h1 class="tittle">Портфолио</h1>
             <ul class="filter-list list">
               <li class="filter-list__item">
-                <button type="button" class="filter-list__btn btn btn-active">Все</button>
+                <button type="button" class="filter-list__btn btn btn--active">Все</button>
               </li>
               <li class="filter-list__item">
                 <button type="button" class="filter-list__btn btn">Веб-сайты</button>
@@ -235,6 +235,25 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <!-- form -->
+        <div class="footer__form">
+          <p>Подпишитесь на рассылку</p>
+          <form action="#" class="form-footer">
+            <div class="form-footer__field">
+              <input type="email" name="subscribe" placeholder="E-mail" id="subscribe" class="form-footer__input">
+              <label for="subscribe">E-mail</label>
+            </div>
+            <div class="form__fild">
+              <button type="submit" class="form-footer__btn btn">
+                <span>Подписаться</span>
+                <svg width="24" height="24" class="send">
+                  <use href="./img/sprites2.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
