Убрал for в поле текста modal-form

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </svg>
           </label>
 
-          <label for="textarea" class="form-modal__label">
+          <label class="form-modal__label">
             <span>Комментарий</span>
             <textarea class="form-modal__text" id="textarea" name="mesSage" placeholder="Введите текст"></textarea>
           </label>
